--- a/css/global_style.css
+++ b/css/global_style.css
@@ -1,7 +1,11 @@
 :root{
     --clr-primary:#88675B;
+    --clr-secondary:#FFE5DB;
     --clr-light:#FFF;
     --clr-dark:#232831;
+
+    --fw-semi:600;
+    --fs-primary:1.25rem;
 }
 
 *{
@@ -13,7 +17,7 @@
 
 body{
     font-family: 'Poppins', sans-serif;
-    font-size: 1.12rem;
+    font-size:var(--fs-primary);
     overflow-x: hidden;
 }
 
