--- a/css/home.css
+++ b/css/home.css
@@ -32,7 +32,8 @@
     
 }
 
-.home-cover__intro button{
+.home-cover__intro a{
+    display: inline-block;
     min-width: 250px;
     padding: 5px;
     text-align: center;
